Fix map view height collapse

--- a/src/app/components/map-view/map-view.component.css
+++ b/src/app/components/map-view/map-view.component.css
@@ -3,8 +3,7 @@
   display: flex;
   flex: 1;
   width: 100%;
-  height: 100%;
-  min-height: calc(100vh - var(--header-height, 80px) - var(--footer-height, 4.5rem));
+  height: calc(100vh - var(--header-height, 80px) - var(--footer-height, 4.5rem));
   position: relative;
   overflow: hidden;
 }
@@ -19,14 +18,12 @@
 #map {
   width: 100%;
   height: 100%;
-  min-height: inherit;
   background-color: #e5e7eb; /* สีพื้นหลังกันจอขาว */
 }
 
 :host ::ng-deep .leaflet-container {
   width: 100%;
   height: 100%;
-  min-height: inherit;
   background: #e5e7eb;
 }
 
